fix: add mising conf

--- a/PrintingVariables/main.ipynb
+++ b/PrintingVariables/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "410858a5",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "f989f4a7",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "c4bb8a53",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "1df84b15",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "33b39cea",
    "metadata": {},
    "outputs": [
@@ -226,16 +226,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "f8fe906a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "cannot convert untyped constant {string \"Bolivia\"} to <int>",
-     "output_type": "error",
-     "traceback": [
-      "cannot convert untyped constant {string \"Bolivia\"} to <int>"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice to see you here at Bolivia"
      ]
     }
    ],
@@ -244,8 +243,8 @@
     "import \"fmt\"\n",
     "\n",
     "func main()  {\n",
-    "\tvar grades int = \"Bolivia\"\n",
-    "\tfmt.Printf(\"Nice to see you here at %v \\n\", name)\n",
+    "\tvar country string = \"Bolivia\"\n",
+    "\tfmt.Printf(\"Nice to see you here at %v\", country)\n",
     "}\n",
     "\n",
     "main()"
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "08a2057e",
    "metadata": {},
    "outputs": [
@@ -270,8 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numero: 8723 \n",
-      "Decimal: %!d(float64=45.3) \n"
+      "Numero: 8723 \n"
      ]
     }
    ],
@@ -298,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8b6365d0",
    "metadata": {},
    "outputs": [
