--- a/4_ArraysSlicesMaps/4_1_Arrays/main.ipynb
+++ b/4_ArraysSlicesMaps/4_1_Arrays/main.ipynb
@@ -384,6 +384,103 @@
     "}\n",
     "main()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Error impresion\n",
+    "\n",
+    "Resultado:\n",
+    "\n",
+    "Error (Out of bounds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "package main\n",
+    "\n",
+    "import \"fmt\"\n",
+    "\n",
+    "func main() {\n",
+    "        arr := [4]int{10, 20, 30, 50, 90}\n",
+    "        fmt.Println(arr)\n",
+    "}\n",
+    "main()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Impresion strings\n",
+    "\n",
+    "Resultado:\n",
+    "\n",
+    "0 -> a\n",
+    "1 -> b\n",
+    "2 -> c\n",
+    "3 -> \n",
+    "4 -> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "package main\n",
+    "\n",
+    "import \"fmt\"\n",
+    "\n",
+    "func main() {\n",
+    "        arr := [5]string{\"a\", \"b\", \"c\"}\n",
+    "        for index, element := range arr {\n",
+    "                fmt.Println(index, \"->\", element)\n",
+    "        }\n",
+    "}\n",
+    "main()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Impresion matris\n",
+    "\n",
+    "Resultado (Asi es, el segundo es un espacio vacio):\n",
+    "\n",
+    "a\n",
+    "\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "package main\n",
+    "\n",
+    "import \"fmt\"\n",
+    "\n",
+    "func main() {\n",
+    "        arr := [5][2]string{{\"a\"}, {\"b\"}, {\"c\"}}\n",
+    "        fmt.Println(arr[0][0])\n",
+    "        fmt.Println(arr[1][1])\n",
+    "        fmt.Println(arr[2][0])\n",
+    "}\n",
+    "main()"
+   ]
   }
  ],
  "metadata": {
