refactor: more examples

--- a/7_StructMethodsInterfaces/7_2_StructPassToFunc/main.ipynb
+++ b/7_StructMethodsInterfaces/7_2_StructPassToFunc/main.ipynb
@@ -52,6 +52,95 @@
     "}\n",
     "main()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Examples\n",
+    "\n",
+    "### Example - Initializing in function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "package main\n",
+    "import \"fmt\"\n",
+    "\n",
+    "type Movie struct {\n",
+    "\tname   string\n",
+    "\trating float32\n",
+    "}\n",
+    "\n",
+    "func getMovie(s string, r float32) (m Movie) {\n",
+    "\tm = Movie{\n",
+    "\t\tname:   s,\n",
+    "\t\trating: r,\n",
+    "\t}\n",
+    "\treturn\n",
+    "}\n",
+    "\n",
+    "func main() {\n",
+    "\tfmt.Printf(\"%+v\", getMovie(\"xyz\", 3.5)) // {𒀸name:xyz 𒀸rating:3.5}\n",
+    "}\n",
+    "main()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example - Initialize in func and append"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "package main\n",
+    "import \"fmt\"\n",
+    "\n",
+    "type Movie struct {\n",
+    "\tname   string\n",
+    "\trating float32\n",
+    "}\n",
+    "\n",
+    "func getMovie(s string, r float32) (m Movie) {\n",
+    "\tm = Movie{\n",
+    "\t\t\tname:   s,\n",
+    "\t\t\trating: r,\n",
+    "\t}\n",
+    "\treturn\n",
+    "}\n",
+    "\n",
+    "func main() {\n",
+    "\tmov := getMovie(\"xyz\", 2.1)\n",
+    "\tmov1 := getMovie(\"abc\", 3.3)\n",
+    "\tmovies := make([]Movie, 5)\n",
+    "\tmovies = append(movies, mov)\n",
+    "\tmovies = append(movies, mov1)\n",
+    "\tfor _, value := range movies {\n",
+    "\t\t\tfmt.Println(value)\n",
+    "\t}\n",
+    "}\n",
+    "main()\n",
+    "\n",
+    "// { 0}\n",
+    "// { 0}\n",
+    "// { 0}\n",
+    "// { 0}\n",
+    "// { 0}\n",
+    "// {xyz 2.1}\n",
+    "// {abc 3.3}"
+   ]
   }
  ],
  "metadata": {
